Add du via-docker wrapper and tighten EOL rules

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,11 +1,14 @@
-# Default behavior: detect text files and prefer LF on checkout.
+# Normalize text files to LF in the repository and on checkout by default.
 * text=auto eol=lf
 
-# Shell scripts should always use LF, even on Windows checkouts.
+# Linux/Unix scripts must always checkout with LF.
 *.sh   text eol=lf
 *.bash text eol=lf
 
-# Windows-native scripts should use CRLF.
-*.bat text eol=crlf
-*.cmd text eol=crlf
-*.ps1 text eol=crlf
+# Windows scripts: store LF in repo, checkout CRLF on Windows working trees.
+*.bat    text eol=crlf
+*.cmd    text eol=crlf
+*.ps1    text eol=crlf
+*.psm1   text eol=crlf
+*.psd1   text eol=crlf
+*.ps1xml text eol=crlf
